fix unknown unity version starting (expermental versions dont have dictionary key), adding preferred version option, move SetFocusToGrid in tools,

--- a/UnityLauncherPro/MainWindow.xaml
+++ b/UnityLauncherPro/MainWindow.xaml
@@ -437,6 +437,7 @@
 							<ContextMenu>
 								<MenuItem x:Name="menuItemCopyVersionInstalled" Header="Copy Unity Version" Click="MenuItemCopyVersion_Click" />
 								<MenuItem x:Name="menuItemShowUnityInExplorer" Header="Show in Explorer" Click="MenuItemShowProjectInExplorer_Click" />
+								<MenuItem x:Name="menuItemSetPreferredUnityVersion" Header="Set as Preferred Version" Click="MenuItemSetPreferredUnityVersion_Click"/>
 							</ContextMenu>
 						</DataGrid.ContextMenu>
 
